fdo#85258 differentiate between empty cell and empty result in matrix

Change-Id: I79259224e411f9c1a6e852623d9d49cf89a03c27
(cherry picked from commit 069698de192ef7e8d3582398e4542c175cabb987)
Reviewed-on: https://gerrit.libreoffice.org/13617
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 007bede69824b2caee948d21acefc2f5b0f63b3a)